--- a/SDL_SetSurfaceBlendMode.mediawiki
+++ b/SDL_SetSurfaceBlendMode.mediawiki
@@ -15,7 +15,7 @@ int SDL_SetSurfaceBlendMode(SDL_Surface* surface,
 == Function Parameters ==
 {|
 |'''surface'''
-|the surface to update
+|the surface / [[SDL_Surface]] to update
 |-
 |'''blendMode'''
 |[[SDL_BlendMode]] to use for blit blending
