--- a/SDL_UnlockSurface.mediawiki
+++ b/SDL_UnlockSurface.mediawiki
@@ -24,7 +24,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-Between calls to [[SDL_LockSurface]]() / [[SDL_UnlockSurface]](), you can write to and read from \c surface->pixels, using the pixel format stored in \c surface->format. Once you are done accessing the surface, you should use [[SDL_UnlockSurface]]() to release it.
+Between calls to [[SDL_LockSurface]]() / [[SDL_UnlockSurface]](), you can write to and read from surface->pixels, using the pixel format stored in surface->format. Once you are done accessing the surface, you should use [[SDL_UnlockSurface]]() to release it.
 
 Not all surfaces require locking. If SDL_MUSTLOCK(surface) evaluates to 0, then you can read and write to the surface at any time, and the pixel format of the surface will not change.
 
