--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -4,7 +4,7 @@
 <!-- format wiki -->
 <!-- language en -->
 <!-- pragma section-numbers 2 -->
-<!-- acl Lauren MacDonell:read,write Sam Lantinga:read,write All:read -->
+<!-- acl All:read -->
 = Simple DirectMedia Layer 1.3 Wiki =
 This wiki is your portal to documentation and other resources for SDL 1.3.
 
