--- a/SDL_GetRelativeMouseState.mediawiki
+++ b/SDL_GetRelativeMouseState.mediawiki
@@ -37,7 +37,7 @@ You can add your code example here
 The current button state is returned as a button bitmask, which can be tested using the SDL_BUTTON(X) macros, and '''x''' and '''y''' are set to the mouse deltas since the last call to [[SDL_GetRelativeMouseState]]().
 
 == Related Functions ==
-:[[SDL_GetMouseState]] ??? Because it's essentially the same a different way
+:[[SDL_GetMouseState]] ??? ''Because it's essentially the same a different way''
 
 ----
 [[CategoryAPI]], [[CategoryMouse]]
