--- a/SDL_GetRelativeMouseMode.mediawiki
+++ b/SDL_GetRelativeMouseMode.mediawiki
@@ -19,7 +19,7 @@ SDL_bool SDL_GetRelativeMouseMode(int index)
 
 == Return Value ==
 Returns SDL_TRUE if relative mode is enabled, or SDL_False if it is disabled.
-<<Color2(green,Is this right? What does it do if relative mode is not supported?)>>
+''<<Color2(green,Is this right? What does it do if relative mode is not supported?)>>''
 
 == Code Examples ==
 ```c++
