--- a/SDL_GetModState.mediawiki
+++ b/SDL_GetModState.mediawiki
@@ -23,6 +23,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_SetModState]]
 
 ----
 [[CategoryAPI]], [[CategoryKeyboard]]
