edit page for format error

--- a/SDL_PollEvent.mediawiki
+++ b/SDL_PollEvent.mediawiki
@@ -8,17 +8,17 @@ Use this function to poll for currently pending events.
 
 == Syntax ==
 ```c++
-int SDL_PollEvent(SDL_Event * event)
+int SDL_PollEvent(SDL_Event* event)
 ```
 
 == Function Parameters ==
 {|
 |'''event'''
-|If not NULL, the next event is removed from the queue and stored in event.
+|If not NULL, the next event is removed from the queue and stored in '''event'''.
 |}
 
 == Return Value ==
-Returns 1 if there are any pending events, or 0 if there are none available.
+Returns 1 if there are any pending events, or 0 if there are none available; call [[SDL_GetError]]() for more information.  <<Color2(green,The previous author did not include any provision for an error RV. Can this function produce an error or only 0?  Would you still call the error function?)>>
 
 == Code Examples ==
 ```c++
@@ -32,14 +32,15 @@ while(1){
 ```
 
 == Remarks ==
- SDL_PollEvent is the favored way of receiving system events since it can be done from the main loop and does not suspend the main loop while waiting on an event to be posted.
+[[SDL_PollEvent]] is the favored way of receiving system events since it can be done from the main loop and does not suspend the main loop while waiting on an event to be posted.
 
 == Related Functions ==
-:[[SDL_WaitEvent]], [[SDL_WaitEventTimeout]]
+:[[SDL_GetEventFilter]]
 :[[SDL_PeepEvents]]
 :[[SDL_PushEvent]]
-:[[SDL_SetEventFilter]], [[SDL_GetEventFilter]]
+:[[SDL_SetEventFilter]]
+:[[SDL_WaitEvent]]
+:[[SDL_WaitEventTimeout]]
+
 ----
-[[CategoryAPI]], [[CategoryHeader]]
-----
-[[CategoryAPI]]
+[[CategoryAPI]], [[CategoryEvents]]
