--- a/SDL_BlitSurface.mediawiki
+++ b/SDL_BlitSurface.mediawiki
@@ -2,16 +2,16 @@
 <!-- pragma disable-camelcase -->
 '''DRAFT'''
 
-= SDL_UpperBlit =
+= SDL_BlitSurface =
 Use this function to perform a fast blit from the source surface to the destination surface.
 
 
 == Syntax ==
 ```c++
-int SDL_UpperBlit(SDL_Surface* src,
-                  SDL_Rect*    srcrect,
-                  SDL_Surface* dst,
-                  SDL_Rect*    dstrect)
+int SDL_BlitSurface(SDL_Surface* src,
+                    SDL_Rect*    srcrect,
+                    SDL_Surface* dst,
+                    SDL_Rect*    dstrect)
 ```
 
 == Function Parameters ==
@@ -101,8 +101,8 @@ You should call [[SDL_BlitSurface]]() unless you know exactly how SDL blitting w
 This is the public blit function, [[SDL_BlitSurface]](), and it performs rectangle validation and clipping before passing it to [[SDL_LowerBlit]]().
 
 == Related Functions ==
-:[[SDL_BlitSurface]]???
 :[[SDL_LowerBlit]]???
+:[[SDL_UpperBlit]]
 
 ----
 [[CategoryAPI]], [[CategorySurface]]
