--- a/SDL_RenderClear.mediawiki
+++ b/SDL_RenderClear.mediawiki
@@ -57,7 +57,7 @@ int main(int argc, char** argv)
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_SetRenderDrawColor]]???
+:[[SDL_SetRenderDrawColor]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
