--- a/SDL_WaitEventTimeout.mediawiki
+++ b/SDL_WaitEventTimeout.mediawiki
@@ -15,13 +15,10 @@ int SDL_WaitEventTimeout(SDL_Event* event,
 == Function Parameters ==
 {|
 |'''event'''
-|if not NULL, the next event is removed from the queue and
-
-|}
-451 	* stored in that area||
-{|
+|if not NULL, the next event is removed from the queue and stored in ,,that area,, ^'''event'''^
+|-
 |'''timeout'''
-|description
+|^the number of milliseconds to wait for the next available event^
 |}
 
 == Return Value ==
