--- a/SDL_HasSSE.mediawiki
+++ b/SDL_HasSSE.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_HasSSE =
-Use this function to return true if the CPU has SSE features.
+Use this function to ,,return true if,, ^determine whether^ the CPU has SSE features.
 
 
 == Syntax ==
