--- a/APIContributionStyleGuide.mediawiki
+++ b/APIContributionStyleGuide.mediawiki
@@ -34,6 +34,8 @@ Before you save your changes please include a note in the Comment field below th
 * added code example to C++ section
 * remarked on use of function with [sound card model]
 
+{i} Especially when using the text editor, use the <<Color2(blue,Preview)>> function in the left sidebar before saving your changes to ensure that the markup you have included is producing the desired result as well as to scan for errors in a different view.
+
 When you have completed adding your content and are satisfied with the formatting use the <<Color2(blue,Save Changes)>> link in the left column to save your changes.
 
 '''Automatic Backup of Drafts'''<br/>
