--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -21,7 +21,7 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 * <<Color2(green, Windows)>>
 * <<Color2(green, Mac OS X)>>
 * Linux
-* ???: Add OpenGL 3.0 context support
+* Ryan: Add OpenGL 3.X context support
 * Sam: Create API for clipboard support (check out !PyGame)
 * Sam: Create flags for specifying foreign window event behavior
 
@@ -68,12 +68,14 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 
 == Event ==
 
+=== Complete ===
+* <<Color2(green, Sam: Add a way to dynamically register for custom event types)>>
+
 === Required ===
 * Sam: Add a timestamp to events
 * Sam: Add modifier state to key and button events
 
 === Wishlist ===
-* Add a way to dynamically register for custom event types
 * Add a timeout parameter for [[SDL_WaitEvent]]() (http://lists.libsdl.org/pipermail/sdl-libsdl.org/2008-May/thread.html#65067)
 
 == Mouse Input ==
