--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -145,6 +145,9 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 
 == General ==
 
+=== Complete ===
+* <<Color2(green, Ryan: Create API for assertions)>>
+
 === Required ===
 * Sam: Public license for SDL_compat.c, tests, and SDL_main*
 * Sam: Create extended set of (negative) error codes and have the API functions document and return them
