--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -26,7 +26,7 @@ Registered users can use the '''Edit''' links under the '''Page Actions''' headi
 === What is SDL? ===
 The Simple !DirectMedia Layer library (SDL) is a general API that provides low level access to audio, keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D framebuffer across multiple platforms.
 
-The current version (1.3) supports Windows, Windows CE, Mac OS X, Linux,  FreeBSD, NetBSD, OpenBSD, BSD/OS, Solaris, and QNX. The code contains support for other operating systems but these are not officially supported.
+The current version (1.3) supports Windows, Windows CE, Mac OS X, Linux,  FreeBSD, NetBSD, OpenBSD, BSD/OS, Solaris, and QNX. The code contains support for other operating systems but those are not officially supported.
 
 SDL is written in C, but works with C++ natively, and has bindings to several other languages, including Ada, C#, Eiffel, Erlang, Euphoria, Guile, Haskell, Java, Lisp, Lua, ML, Objective C, Pascal, Perl, PHP, Pike, Pliant, Python, Ruby, and Smalltalk.
 
@@ -35,7 +35,7 @@ This library is distributed under GNU LGPL [<- link to licensing info] version 2
 === What can SDL do? ===
 ''''' Video'''''
 
-* Set a video mode at any depth (8-bpp or greater)                 with optional conversion, if the video mode is                 not supported by the hardware
+* Set a video mode at any depth (8-bpp or greater) with optional conversion, if the video mode is not supported by the hardware
 * Write directly to a linear graphics framebuffer
 * Create surfaces with colorkey or alpha blending                 attributes
 * Surface blits are automatically converted to the                 target format using optimized blitters and are                 hardware accelerated, when possible. MMX                 optimized blits are available for the x86
